--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "author": "Xuanidev",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
